--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,10 +12,15 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
+    "@tailwindcss/postcss": "^4.0.0",
     "axios": "^1.7.9",
+    "lucide-react": "^0.474.0",
     "next": "^15.1.0",
+    "postcss": "^8.5.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.0",
+    "types@axios": "link:/types@axios"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
