--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,8 +14,10 @@
     "@repo/ui": "workspace:*",
     "@tailwindcss/postcss": "^4.0.0",
     "axios": "^1.7.9",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
     "next": "^15.1.0",
+    "next-auth": "^4.24.11",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -25,8 +27,10 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@repo/db": "workspace:*",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
-    "@types/react": "18.3.1",
+    "@types/react": "18.3.0",
     "@types/react-dom": "18.3.0",
     "typescript": "5.5.4"
   }
