--- a/apps/ws_server/package.json
+++ b/apps/ws_server/package.json
@@ -8,18 +8,20 @@
     "dev": "npm run build && npm run start"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace:*",
-    "@repo/backend-common":"workspace:*",
-    "@repo/db":"workspace:*"
-    
+    "@repo/backend-common": "workspace:*",
+    "@repo/db": "workspace:*",
+    "@repo/typescript-config": "workspace:*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/cookie-parser": "^1.4.8",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/ws": "^8.5.13",
+    "cookie": "^1.0.2",
+    "cookie-parser": "^1.4.7",
     "jsonwebtoken": "^9.0.2",
     "ws": "^8.18.0"
   }
